[project]
name = "houseagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.4",
    "langchain-community>=0.3.3",
    "openai>=1.52.2",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]
