[project]
name = "houseagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.2",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[tool.setuptools]
packages = ["houseagent"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
